style: fixed the extra spacing in rows

--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ main {
     box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
